2007-01-02  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* ProfileBase.cs: fixed SetPropertyValue, allow anonymous attribute
	check added on property value set

2007-01-02  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* ProfileBase.cs: added inherited properties properties initialization

2006-12-26  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* ProfileGroupBase.cs: fixed property name while getting from parent

2006-12-26  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* ProfileParser.jvm.cs: implemented PageMapper call
	* ProfileBase.cs: fixed SettingsProperty type resolving, 
	added SettingsProperty validation

2006-12-20  Marek Habersack  <grendello@gmail.com>

	* ProfileParser.cs: use App_Code compiler to get the assembly
	where the ProfileCommon class is found.

2006-11-05  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* ProfileBase.cs, ProfileGroupBase.cs, ProfileManager.cs, 
	ProfileModule.cs, ProfileProviderCollection.cs, SqlProfileProvider.cs:
	implemented profile feature
	* added: ProfileParser.cs, ProfileParser.jvm.cs stubs for profile
	helper classes compilation

2006-02-28  Chris Toshok  <toshok@ximian.com>

	* ProfileBase.cs: corcompare work.

	* SqlProfileProvider.cs: add stubbed out file.

2005-11-30  Chris Toshok  <toshok@ximian.com>

	* ProfileBase.cs (Properties): mark as override, not static.

	* ProfileProviderCollection.cs (ProfileProvider): mark as "new" to
	fix warning.

2005-11-18  Chris Toshok  <toshok@ximian.com>

	* ProfileModule.cs: hook up saving of the request's profile.

	* ProfileBase.cs (Save): call base.Save instead of throwing NIE.

2005-11-03  Chris Toshok  <toshok@ximian.com>

	* ProfileEventArgs.cs, ProfileProviderCollection.cs,
	ProfileAutoSaveEventArgs.cs, ProfileMigrateEventArgs.cs,
	ProfileBase.cs, ProfileManager.cs,
	SettingsAllowAnonymousAttribute.cs, ProfileProviderAttribute.cs,
	ProfileEventHandler.cs, CustomProviderDataAttribute.cs,
	DefaultProfile.cs, ProfileModule.cs,