@@ -1,3 +1,8 @@
+2007-01-18  Vladimir Krasnov  <vladimirk@mainsoft.com>
+
+	* ProfileModule.cs: fixed OnLeave, AutomaticSaveEnabled should be
+	checked before save
+
 2007-01-02  Vladimir Krasnov  <vladimirk@mainsoft.com>
 
 	* ProfileBase.cs: fixed SetPropertyValue, allow anonymous attribute
